--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -2,7 +2,7 @@ name: Builder
 
 env:
   BUILD_ARGS: "--test"
-  MONITORED_FILES: "build.yaml config.yaml Dockerfile rootfs"
+  MONITORED_FILES: "build.json config.json Dockerfile rootfs"
 
 on:
   push:
