--- a/maestro_gateway/config.json
+++ b/maestro_gateway/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Maestro Gateway",
-  "version": "1.1",
+  "version": "2.0",
   "slug": "maestro_gateway",
   "description": "MQTT Gateway to MCZ Maestro stoves' api",
   "url": "https://github.com/SebLz/ha-addons/tree/main/maestro_gateway",
@@ -8,6 +8,7 @@
   "init": false,
   "image": "ghcr.io/seblz/{arch}-addon-maestro_gateway",
   "options": {
+    "USE_MCZ_CLOUD": true,
     "MQTT_ip": "core-mosquitto",
     "MQTT_port": "1883",
     "MQTT_authentication": "False",
@@ -18,9 +19,13 @@
     "MQTT_PAYLOAD_TYPE": "TOPIC",
     "WS_RECONNECTS_BEFORE_ALERT": "5",
     "MCZip": "192.168.120.1",
-    "MCZport": "81"
+    "MCZport": "81",
+    "MCZ_device_serial": "xxxxxxxxxxxxx",
+    "MCZ_device_MAC": "xxxxxxxxxxxx",
+    "MCZ_App_URL": "http://app.mcz.it:9000"
   },
   "schema": {
+    "USE_MCZ_CLOUD": "bool",
     "MQTT_ip": "str",
     "MQTT_port": "str",
     "MQTT_authentication": "str",
@@ -31,6 +36,9 @@
     "MQTT_PAYLOAD_TYPE": "str",
     "WS_RECONNECTS_BEFORE_ALERT": "str",
     "MCZip": "str",
-    "MCZport": "str"
+    "MCZport": "str",
+    "MCZ_device_serial": "str",
+    "MCZ_device_MAC": "str",
+    "MCZ_App_URL": "str"
   }
 }
