--- a/maestro_gateway/config.json
+++ b/maestro_gateway/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Maestro Gateway",
-  "version": "2.0",
+  "version": "2.1",
   "slug": "maestro_gateway",
   "description": "MQTT Gateway to MCZ Maestro stoves' api",
   "url": "https://github.com/SebLz/ha-addons/tree/main/maestro_gateway",
@@ -14,8 +14,8 @@
     "MQTT_authentication": "False",
     "MQTT_user": "",
     "MQTT_pass": "",
-    "MQTT_TOPIC_SUB": "Maestro/Command/",
-    "MQTT_TOPIC_PUB": "Maestro/",
+    "MQTT_TOPIC_SUB": "Maestro/Command",
+    "MQTT_TOPIC_PUB": "Maestro/State",
     "MQTT_PAYLOAD_TYPE": "TOPIC",
     "WS_RECONNECTS_BEFORE_ALERT": "5",
     "MCZip": "192.168.120.1",
