--- a/maestro_gateway/rootfs/requirements.txt
+++ b/maestro_gateway/rootfs/requirements.txt
@@ -1,5 +1,5 @@
 paho-mqtt===1.5.0
-websocket-client===0.57.0
-python-socketio==5.0.3
-python-engineio==3.14.2
-requests
+websocket-client===1.5.1
+python-socketio==5.8.0
+python-engineio==4.4.1
+requests==2.28.1
