Add REFRESH_INTERVAL param for local connection

--- a/maestro_gateway/config.json
+++ b/maestro_gateway/config.json
@@ -18,6 +18,7 @@
     "MQTT_TOPIC_PUB": "Maestro/State",
     "MQTT_PAYLOAD_TYPE": "TOPIC",
     "WS_RECONNECTS_BEFORE_ALERT": "5",
+    "REFRESH_INTERVAL": "15.0",
     "MCZip": "192.168.120.1",
     "MCZport": "81",
     "MCZ_device_serial": "xxxxxxxxxxxxx",
@@ -35,6 +36,7 @@
     "MQTT_TOPIC_PUB": "str",
     "MQTT_PAYLOAD_TYPE": "str",
     "WS_RECONNECTS_BEFORE_ALERT": "str",
+    "REFRESH_INTERVAL": "str",
     "MCZip": "str",
     "MCZport": "str",
     "MCZ_device_serial": "str",
